--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ requires-python = ">=3.9"
 dependencies = [
     "aiofiles~=23.2.1",
     "aiomysql==0.2.0",
+    "cryptography>=45.0.2",
     "fastapi==0.110.2",
     "httpx==0.24.0",
     "jieba==0.42.1",
